--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7202,11 +7202,11 @@ display: none;
 }
 .navbar-brand b img.icon{
   width: 60px;
-  height: intrinsic; /*safari */
+  height: 60px;
 }
 .navbar-brand span img.text{
   width: 100px;
-  height: intrinsic; /*safari */
+  height: 60px;
 }
 .topbar .top-navbar .navbar-header .navbar-brand b{
   line-height: 70px;
