--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -7238,7 +7238,7 @@ display: none;
 }
 .navbar-brand span img.text{
   width: 100px;
-  height: 60px;
+  height: auto;
 }
 .topbar .top-navbar .navbar-header .navbar-brand b{
   line-height: 70px;
