--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -35,7 +35,7 @@
 
 
 <div id="projects_dv_form">
-	<div class="row">
+	<!-- <div class="row"> -->
 		<!-- form inputs -->
 		<!-- <div class="col-md-8 col-lg-10" id="projects_dv_form">
 			<fieldset class="form-horizontal"> -->
@@ -72,7 +72,7 @@
 				<%%TRANSLATION(unique field error)%%>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 	
 	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
 		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> Description</a> </li>
