--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -6886,7 +6886,7 @@ ul.timeline > li > .timeline-panel:after {
   background-image: url(../images/login-bg.png);
   position: absolute;
   width: 100%;
-  height: -webkit-fill-available;
+  height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -7683,9 +7683,4 @@ input.fab:checked +.menu-box .menu-items{
 }
 .col-xs-6{
   width: 50% !important;
-}
-@-moz-document url-prefix() {
-  .login-bg {
-    height: 700px;
-  }
 }
